# Attendance-System

./: .gitignore  CMakeLists.txt  README_AttendanceSystem.docx
attendance/: attendance_2026-05-04.csv
include/: attendance_logger.hpp  face_database.hpp  face_embedding.hpp  model_selection.hpp  recognizer.hpp
src/: attendance_logger.cpp  face_database.cpp  main.cpp  recognizer.cpp
